Fix horizontal scroll glitch

--- a/src/components/example/index.css
+++ b/src/components/example/index.css
@@ -1,7 +1,7 @@
 .example {
     font-family: monospace;
     page-break-inside: avoid;
-    margin-right: 0;
+    margin-right: 0.5rem;
 }
 
 @media (max-width: 550px) {
